# CodeBox_Lib

./: README.md
SmartCar_GPS_template/HAREWARE/GPS/: gps.c  gps.h
SmartCar_GPS_template/HAREWARE/LCD/: lcd_init.c  lcd_init.h
SmartCar_GPS_template/HAREWARE/LED/: led.c  led.h
SmartCar_GPS_template/HAREWARE/USART2/: usart2.c  usart2.h
SmartCar_GPS_template/SYSTEM/delay/: delay.c  delay.h
SmartCar_GPS_template/SYSTEM/sys/: sys.h
SmartCar_GPS_template/SYSTEM/usart/: usart.c  usart.h
SmartCar_GPS_template/USER/: ANO_DT.c  ANO_DT.h  Gyroscope_solve.c  Gyroscope_solve.h  Template.uvguix.Administrator  Template.uvguix.sujie  Template.uvguix.兆兆  Template.uvoptx  Template.uvprojx  control.c  control.h  iic.c  iic.h  key.c  key.h  main.c  mpu6050.c  mpu6050.h  mymath.c  mymath.h  pwm.c  pwm.h  readme.txt  stm32f10x_it.c  tim.c  tim.h
SmartCar_GPS_template/USER/Listings/: Template.map  startup_stm32f10x_hd.lst
aruco_marker/aruco_calibration/: CMakeLists.txt  package.xml
aruco_marker/aruco_calibration/launch/: aruco_calibration.launch.py
aruco_marker/aruco_calibration/src/: main.cpp
aruco_marker/aruco_msgs/: CMakeLists.txt
aruco_marker/aruco_msgs/install/: local_setup.sh  setup.sh
aruco_marker/aruco_msgs/install/aruco_msgs/include/aruco_msgs/aruco_msgs/msg/: aruco_pose.h  aruco_pose.hpp
aruco_marker/aruco_msgs/install/aruco_msgs/include/aruco_msgs/aruco_msgs/msg/detail/: aruco_pose__builder.hpp  aruco_pose__rosidl_typesupport_fastrtps_c.h  aruco_pose__rosidl_typesupport_introspection_c.h  aruco_pose__rosidl_typesupport_introspection_cpp.hpp  aruco_pose__struct.h  aruco_pose__traits.hpp  aruco_pose__type_support.h
aruco_marker/aruco_msgs/install/aruco_msgs/local/lib/python3.10/dist-packages/aruco_msgs/: _aruco_msgs_s.ep.rosidl_typesupport_c.c
aruco_marker/aruco_msgs/install/aruco_msgs/local/lib/python3.10/dist-packages/aruco_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
aruco_marker/aruco_msgs/install/aruco_msgs/local/lib/python3.10/dist-packages/aruco_msgs/msg/: _aruco_pose_s.c
aruco_marker/aruco_msgs/install/aruco_msgs/share/ament_index/resource_index/rosidl_interfaces/: aruco_msgs
aruco_marker/aruco_msgs/install/aruco_msgs/share/aruco_msgs/: local_setup.sh  package.sh
aruco_marker/aruco_msgs/install/aruco_msgs/share/aruco_msgs/cmake/: aruco_msgs__rosidl_typesupport_cExport.cmake  aruco_msgs__rosidl_typesupport_cppExport.cmake  export_aruco_msgs__rosidl_generator_cExport.cmake  rosidl_cmake-extras.cmake
aruco_marker/aruco_msgs/install/aruco_msgs/share/aruco_msgs/msg/: ArucoPose.idl  ArucoPose.msg
aruco_marker/aruco_pose/: CMakeLists.txt  FindFFmpeg.cmake  package.xml
aruco_marker/aruco_pose/config/: config.yaml
aruco_marker/aruco_pose/include/: fdcl_common.hpp  h264_decoder.hpp
aruco_marker/aruco_pose/launch/: aruco_pose.launch.py  aruco_pose_cam.launch.py
aruco_marker/aruco_pose/src/: aruco_detector.cpp  aruco_detector_mult.cpp  aruco_pose.cpp  main.cpp  usb_cam.cpp
aruco_marker/aruco_tracking/: CMakeLists.txt  package.xml
aruco_marker/aruco_tracking/include/: fdcl_common.hpp
aruco_marker/aruco_tracking/launch/: aruco_tracking.launch.py  px4_bringup.launch.py
aruco_marker/aruco_tracking/src/: tracking_node.cpp
camera/: CMakeLists.txt  package.xml
camera/src/: usb_cam.cpp
camera/srv/: SaveImage.srv
image_capture/: CMakeLists.txt  package.xml
image_capture/src/: CaptureImage.srv  image_capture.cpp
pwm_control/: package.xml  setup.py
pwm_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pwm_control/install/pwm_control/lib/pwm_control/: pwm_node
pwm_control/install/pwm_control/share/pwm_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
pwm_control/pwm_control/: pwm_node.py
